--- a/src/CSS/MyForm.css
+++ b/src/CSS/MyForm.css
@@ -32,6 +32,10 @@ button {
 input:placeholder-shown {
   font-style: italic;
 }
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap");
+h1 {
+  font-family: "Oswald", sans-serif;
+}
 /* span {
   color: white;
 } */
